Fix hero headline alignment

--- a/app/styles/hero.less
+++ b/app/styles/hero.less
@@ -1,6 +1,8 @@
 .Hero {
   font-size: 1.5rem;
-  padding: 1rem 2rem 4rem;
+  margin: 0 auto;
+  padding: 0 50px 2em 50px;
+  max-width: 960px;
 
   @media @tablet {
     display: flex;
@@ -13,16 +15,17 @@
     font-size: 1.6rem;
     line-height: 1.2;
     margin-bottom: 6rem;
-    padding: 0 2rem;
+    padding-right: 2rem;
     text-align: center;
 
     @media @tablet {
+      font-size: 2rem;
       text-align: left;
       width: 50%;
     }
 
     @media @desktop {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
   }
 
